# rdkb-CcspTr069Pa

./: .gitreview  CONTRIBUTING.md  ChangeLog  Makefile.am  Makefile.orig  NOTICE  README  cacert.pem  configure.ac  genautotools.ini
config/: ccsp_tr069_pa_certificate_cfg_arm.xml  ccsp_tr069_pa_certificate_cfg_mips.xml  ccsp_tr069_pa_certificate_cfg_pc.xml  ccsp_tr069_pa_cfg_arm.xml  ccsp_tr069_pa_cfg_mips.xml  ccsp_tr069_pa_cfg_pc.xml  ccsp_tr069_pa_mapper.xml  ccsp_tr069_pa_mapper_arm.xml  ccsp_tr069_pa_mapper_mips.xml  ccsp_tr069_pa_mapper_pc.xml  custom_mapper.xml  sdm.xml  sdm_arm.xml  sdm_pc.xml  sharedkey_pc
source/: Makefile.am
source-arm/: ccsp_tr069_pa_custom_apis.c
source-embedded/: Makefile.am
source-embedded/CcspCwmpAcsBroker/: ccsp_cwmp_acsbo_base.c  ccsp_cwmp_acsbo_global.h  ccsp_cwmp_acsbo_interface.c  ccsp_cwmp_acsbo_internal_api.h  ccsp_cwmp_acsbo_msoif.c  ccsp_cwmp_acsbo_operation.c  ccsp_cwmp_acsbo_states.c
source-embedded/CcspCwmpAcsConnection/: ccsp_cwmp_acsco_base.c  ccsp_cwmp_acsco_httpacmif.c  ccsp_cwmp_acsco_httpbspif.c  ccsp_cwmp_acsco_interface.c  ccsp_cwmp_acsco_internal_api.h  ccsp_cwmp_acsco_process.c  ccsp_cwmp_acsco_states.c
source-embedded/CcspCwmpCpeController/: ccsp_cwmp_cpeco_access.c  ccsp_cwmp_cpeco_base.c  ccsp_cwmp_cpeco_control.c  ccsp_cwmp_cpeco_global.h  ccsp_cwmp_cpeco_internal_api.h  ccsp_cwmp_cpeco_operation.c  ccsp_cwmp_cpeco_staif.c  ccsp_cwmp_cpeco_states.c  ccsp_tr069pa_mapper_api.c
source-embedded/CcspCwmpProcessor/: ccsp_cwmp_proco_acs_access.c  ccsp_cwmp_proco_base.c  ccsp_cwmp_proco_event.c  ccsp_cwmp_proco_global.h  ccsp_cwmp_proco_internal_api.h  ccsp_cwmp_proco_management.c  ccsp_cwmp_proco_mpaif.c  ccsp_cwmp_proco_operation.c  ccsp_cwmp_proco_process.c  ccsp_cwmp_proco_states.c
source-embedded/CcspCwmpSession/: ccsp_cwmp_sesso_base.c  ccsp_cwmp_sesso_control.c  ccsp_cwmp_sesso_global.h  ccsp_cwmp_sesso_interface.c  ccsp_cwmp_sesso_invoke.c  ccsp_cwmp_sesso_management.c  ccsp_cwmp_sesso_mcoif.c  ccsp_cwmp_sesso_operation.c  ccsp_cwmp_sesso_process.c  ccsp_cwmp_sesso_states.c
source-embedded/CcspCwmpSoapParser/: ccsp_cwmp_soappo_base.c  ccsp_cwmp_soappo_build.c  ccsp_cwmp_soappo_interface.c  ccsp_cwmp_soappo_process.c  ccsp_cwmp_soappo_states.c  ccsp_cwmp_soappo_utility.c
source-embedded/CcspCwmpStunManager/: ccsp_cwmp_stunmo_base.c  ccsp_cwmp_stunmo_operation.c  ccsp_cwmp_stunmo_policy.c  ccsp_cwmp_stunmo_reg_stun.c  ccsp_cwmp_stunmo_states.c  ccsp_cwmp_stunmo_stunbsmif.c
source-embedded/CcspCwmpTcpConnReqHandler/: ccsp_cwmp_tcpcrho_auth.c  ccsp_cwmp_tcpcrho_base.c  ccsp_cwmp_tcpcrho_dstowo.c  ccsp_cwmp_tcpcrho_msg.c  ccsp_cwmp_tcpcrho_operation.c  ccsp_cwmp_tcpcrho_process.c  ccsp_cwmp_tcpcrho_states.c
source-embedded/Ccsp_CustomMapper/: Makefile.am  ccsp_alias_mgr_base.c  ccsp_alias_mgr_helper.c
source-embedded/DslhManagementServer/: ccsp_management_server.c  ccsp_management_server.h  ccsp_management_server_api.c  ccsp_management_server_api.h  ccsp_management_server_pa_api.c  ccsp_supported_data_model.c
source-embedded/Ssp/: Makefile.am  ccsp_tr069_pa_custom_apis.c  ccsp_tr069_pa_mapper.ven501.xml  ccsp_tr069_pa_mapper.xml  ccsp_tr098_e4200_pa_mapper.xml  sdm.xml  ssp_ccsp_cwmp_cfg.c  ssp_ccsp_cwmp_cfg.h  ssp_debug.c  ssp_global.h  ssp_main.c  ssp_web_acm.c  ssp_web_acm.h
source-embedded/include/: ccsp_alias_mgr.h  ccsp_alias_mgr_helper.h  ccsp_cwmp_co_name.h  ccsp_cwmp_co_type.h  ccsp_cwmp_cpeco_exported_api.h  ccsp_cwmp_cpeco_interface.h  ccsp_cwmp_definitions.h  ccsp_cwmp_definitions_cwmp.h  ccsp_cwmp_definitions_database.h  ccsp_cwmp_definitions_general.h  ccsp_cwmp_helper_api.h  ccsp_cwmp_ifo_mco.h  ccsp_cwmp_ifo_mws.h  ccsp_cwmp_proco_exported_api.h  ccsp_cwmp_proco_interface.h  ccsp_cwmp_proco_layout.h  ccsp_cwmp_properties.h  ccsp_cwmp_sesso_exported_api.h  ccsp_cwmp_sesso_interface.h  ccsp_cwmp_soappo_exported_api.h  ccsp_cwmp_soappo_interface.h  ccsp_cwmp_tcpcrho_exported_api.h  ccsp_cwmp_tcpcrho_interface.h  ccsp_management_server_pa_api.h  ccsp_rpc_ns_map.h  ccsp_tr069_cds_definitions.h  ccsp_tr069pa_mapper_api.h  ccsp_tr069pa_wrapper_api.h  ccsp_types.h
source-embedded/test/: Makefile.am  gtest_main.cpp
source-mips/: ccsp_tr069_pa_custom_apis.c
source-pc/: ccsp_tr069_pa_custom_apis.c
source-pc/CcspCwmpAcsBroker/: ccsp_cwmp_acsbo_base.c  ccsp_cwmp_acsbo_internal_api.h  ccsp_cwmp_acsbo_msoif.c  ccsp_cwmp_acsbo_operation.c  ccsp_cwmp_acsbo_states.c
source-pc/CcspCwmpAcsConnection/: ccsp_cwmp_acsco_base.c  ccsp_cwmp_acsco_global.h  ccsp_cwmp_acsco_httpacmif.c  ccsp_cwmp_acsco_httpbspif.c  ccsp_cwmp_acsco_interface.c  ccsp_cwmp_acsco_process.c  ccsp_cwmp_acsco_states.c
source-pc/CcspCwmpCpeController/: ccsp_cwmp_cpeco_access.c  ccsp_cwmp_cpeco_base.c  ccsp_cwmp_cpeco_control.c  ccsp_cwmp_cpeco_global.h  ccsp_cwmp_cpeco_interface.c  ccsp_cwmp_cpeco_operation.c  ccsp_cwmp_cpeco_states.c  ccsp_tr069pa_mapper_api.c
source-pc/CcspCwmpProcessor/: ccsp_cwmp_proco_acs_access.c  ccsp_cwmp_proco_base.c  ccsp_cwmp_proco_event.c  ccsp_cwmp_proco_global.h  ccsp_cwmp_proco_interface.c  ccsp_cwmp_proco_internal_api.h  ccsp_cwmp_proco_management.c  ccsp_cwmp_proco_mpaif.c  ccsp_cwmp_proco_operation.c  ccsp_cwmp_proco_process.c  ccsp_cwmp_proco_states.c
source-pc/CcspCwmpSession/: ccsp_cwmp_sesso_base.c  ccsp_cwmp_sesso_control.c  ccsp_cwmp_sesso_interface.c  ccsp_cwmp_sesso_internal_api.h  ccsp_cwmp_sesso_invoke.c  ccsp_cwmp_sesso_management.c  ccsp_cwmp_sesso_mcoif.c  ccsp_cwmp_sesso_operation.c  ccsp_cwmp_sesso_process.c  ccsp_cwmp_sesso_states.c
source-pc/CcspCwmpSoapParser/: ccsp_cwmp_soappo_base.c  ccsp_cwmp_soappo_build.c  ccsp_cwmp_soappo_global.h  ccsp_cwmp_soappo_interface.c  ccsp_cwmp_soappo_internal_api.h  ccsp_cwmp_soappo_process.c  ccsp_cwmp_soappo_states.c  ccsp_cwmp_soappo_utility.c
source-pc/CcspCwmpStunManager/: ccsp_cwmp_stunmo_base.c  ccsp_cwmp_stunmo_global.h  ccsp_cwmp_stunmo_interface.c  ccsp_cwmp_stunmo_internal_api.h  ccsp_cwmp_stunmo_operation.c  ccsp_cwmp_stunmo_policy.c  ccsp_cwmp_stunmo_reg_stun.c  ccsp_cwmp_stunmo_states.c  ccsp_cwmp_stunmo_stunbsmif.c
(+208 files in other folders)
